23. fix align with FxFlex. replace "host" with css class in root component.

--- a/reg-exp/front-end/src/app/appComponent/app.component.css
+++ b/reg-exp/front-end/src/app/appComponent/app.component.css
@@ -18,3 +18,12 @@ footer.footer {
   flex: 1 1 auto;
   flex-direction: column;
 }
+
+
+div.root-component router-outlet.root-router + * {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+}
+
+
